--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed');
-@import url('https://fonts.googleapis.com/css?family=Sedgwick+Ave');
+@import url('https://fonts.googleapis.com/css?family=Satisfy|Thasadith');
+/* font-family: 'Satisfy', cursive; */
+/* font-family: 'Thasadith', sans-serif; */
 
 * {
     margin: 0;
@@ -10,116 +11,169 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Encode Sans Condensed', sans-serif;
     font-size: 1.2rem;
+    font-family: 'Thasadith', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-family: 'Satisfy', cursive;
 }
 
 .landing-section {
     width: 100%;
     height: 100vh;
-    background: #948E99;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #2E1437, #948E99);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #2E1437, #948E99); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #3f4c6b;
     display: flex;
     flex-direction: column;
+    /* justify-content: space-between; */
 }
 
 .header {
-    padding: 1rem;
+    /* outline: 1px solid white; */
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 5rem;
+    /* text-transform: uppercase; */
 }
-
+.logo {
+    /* outline: 1px solid white; */
+    height: 100%;
+}
+ 
+.logo-img {
+    height: 4rem;
+    width: 4rem;
+}
 .nav {
     /* outline: 1px solid yellow; */
     height: 100%;
     list-style: none;
     display: flex;
-    justify-content: space-around; 
+    /* flex-direction: column; */
+    justify-content: space-evenly; 
+    margin-top: 1rem;
+}
+
+.nav-item {
+    padding: .8rem 0 .8rem 1rem;
 }
 
 .nav-item a {
-    font-size: 1.1rem;
-    /* color: rgb(182, 182, 182); */
-    color: rgba(255, 255, 255, 0.781);
+    /* font-size: 1.2rem; */
+    font-family: 'Thasadith', sans-serif;
+    letter-spacing: .1rem;
+    color: #fff;
     text-decoration: none;
 }
-   
+  
 .landing-content {
-    /* outline: 1px solid green; */
-    /* height: 100vh; */
-    width: 100%;
+    /* outline: 2px solid green; */
+    height: 100%;
     margin: auto;
-    padding: 13rem;
+    padding: 4rem 10rem 10rem 10rem;
     display: flex;
+    /* flex: 1 0 0; */
     flex-direction: column;
     align-content: center;
     align-items: center;
-    /* color: rgb(182, 182, 182); */
-    color: rgba(255, 255, 255, 0.781);
+    letter-spacing: .04rem;
+    color: rgba(255, 255, 255, 1);
 }
 
 .intro-name {
+    /* outline: 1px solid white; */
+    text-align: center;
+    /* letter-spacing:.06rem; */
+    font-weight: 400;
     padding: .7rem;
 }
 
-.all-content {
-    padding: 2rem;
-    background: #f2f0f5e5;
-    /* background: -webkit-linear-gradient(to top, #2E1437, #948E99);
-    background: linear-gradient(to top, #2E1437, #948E99); */
-    
-}
-.about-section {
-    /* outline: 1px solid blue; */
-    height: 80%;
-    width: 80%;
-    margin: auto;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: rgba(182, 182, 182, .4); */
-}
-
-.about-img-content {
-    /* outline: 1px solid yellow; */
-    width: 80%;
-    display: flex;
-    justify-content: center;
-}
-
-.about-img-content img {
-    /* margin: auto; */
-    height: 35%;
-    width: 35%;
-    border-radius: 50%; 
-}
-
-.about-img-content p.greeting {
-    align-self: center;
-    font-size: 3rem;
-    color: rgba(33, 14, 39, .9);
-    font-family: 'Sedgwick Ave', cursive;
-    padding-left: 2rem;
-    /* outline: 1px solid green; */
-}
-
-.about-img-content p.greeting span {
+.intro-name span {
+    font-family: 'Satisfy', cursive;
     font-size: 5rem;
 }
 
-.about-content {
-    /* outline: 1px solid red; */
-    padding: 1rem 0 3rem 0;
+.projects-section {
+    /* outline: 1px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 80%;
+    margin: auto;
 }
 
-.about-content p {
-    width: 70%;
-    margin: auto;
-    padding: .7rem;
-    text-align: justify;
-    line-height: 2rem;
-    letter-spacing: 1px;
+.project {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 2rem;
+    justify-content: center;
+    align-content: center;
+
+    /* outline: 2px solid red; */
 }
+.project-title {
+    /* outline: 1px solid blue; */
+    font-family: 'Satisfy', cursive;
+    text-align: center;
+}
+.project-content {
+    display: flex;
+
+    /* outline: 1px solid yellow; */
+}
+
+.project-img {
+    flex-basis: 40%;
+    padding: 1.5rem;
+}
+
+.project img {
+    max-height: 15rem;
+    max-width: 15rem;
+    min-height: 15rem;
+    min-width: 15rem;
+}
+
+.project-2 {
+    display: flex;
+    flex-direction: row-reverse;
+    /* outline: 2px solid blue; */
+}
+
+.project-p {
+    flex: 0 0 50%;
+    text-align: justify;
+    justify-content: center;
+    font-size: 1.6rem;
+    padding: 1rem;
+    /* outline: 1px solid green; */
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 3rem;
+    /* outline: 1px solid red; */
+}
+
+.btn1, .btn2 {
+    outline: 1px solid black;
+    padding: 1rem 2rem;
+}
+
+
+
+
+
+
+
+
+
 
  /* .projects-section {
     outline: 1px solid indigo;
@@ -153,3 +207,12 @@ body {
     outline: 1px solid violet;
     color: rgb(182, 182, 182);
 } */
+
+/* .footer-section {
+    height: 2rem;
+    width: 100%;
+    padding: .5rem;
+    font-size: .8rem;
+    letter-spacing: .01rem;
+    text-align: justify;
+    /* outline: 1px solid white; */
